examples/test/testpolicy19484.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19484
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key2: value9
      key39: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value32
          key6: value19
          key21: value37
      podSelector:
        matchLabels:
          key15: value39
